--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>mugic</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" media="screen" href="css/style.css">
+  <link rel="stylesheet" media="screen" href="/static/css/style.css">
 </head>
 <body>
 
@@ -12,28 +12,30 @@
 <div id="particles-js"></div>
 
 <div id="logo">
-    <img src="img/logo_fade_round.png" alt="logo" style="width: 50vw;">
+    <img src="/static/img/logo_fade_round.png" alt="logo" style="width: 50vw;">
 </div>
 
 <div class="login">
-    <img src="img/icon/spotify.png" alt="login" style="width: 10vw;">
+    <a href="{{ auth_url }}">
+        <img src="/static/img/icon/spotify.png" alt="login" style="width: 10vw;">
+    </a>
 </div>
 
 <!-- scripts -->
 <script>
     var images = [
-                  "img/background/0.jpg",
-                  "img/background/1.jpg",
-                  "img/background/2.jpg"
+                  "/static/img/background/0.jpg",
+                  "/static/img/background/1.jpg",
+                  "/static/img/background/2.jpg"
                  ];
     var i = 0;
     var e = document.getElementById("particles-js");
     setInterval(function(){
-               e.style.backgroundImage = "url(" + images[i++%images.length] + ")";
+               e.style.backgroundImage = "url(" + images[++i%images.length] + ")";
                }, 10000);
 </script>
-<script src="js/particles.js"></script>
-<script src="js/app.js"></script>
+<script src="/static/js/particles.js"></script>
+<script src="/static/js/app.js"></script>
 
 
 </body>
