--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -344,6 +344,81 @@
         display: flex;
     }
     
+    .ex-mask{ 
+        width: 100%;height:100%;background: #000;
+        position: absolute;top: 0px;height: 0px;z-index: 8000;
+        opacity:0.4; filter: Alpha(opacity=40);
+    }
+
+    .ex-window{ 
+        width: 300px;height: auto;display: none;
+        position: absolute;z-index: 9000;
+        top: 0px;left: 0px;
+        border: 1px solid #D5D5D5;background: #fff;
+    }
+
+    .ex-window a{text-decoration: none;}
+
+    .ex-window-title{
+        height: 48px;line-height: 48px; padding:0px 20px;color: #535353;font-size: 16px;font-weight: bold;
+        border-bottom: 1px solid #efefef;background: #f5f5f5;
+        cursor: move;
+        user-select:none;
+    }
+
+    .ex-window-closebutton{
+        width: 16px;height: 16px;display: block;
+        position: absolute;top: 12px;right: 20px;
+        background: url(../static/img/close_def.png) no-repeat;cursor: pointer;
+    }
+
+    .ex-window-closebutton:hover{background:url(../static/img/close_hov.png);}
+
+    .ex-window-content{
+        padding: 15px 20px;
+    }
+
+    .ex-window-pt15{
+        padding-top: 15px;
+    }
+
+    .ex-window-l40{
+        height: 40px;line-height: 40px;
+        text-align: right;
+    }
+
+    .ex-window-input{
+        width: 100%;height: 50px;
+        margin: 0px;padding:0px;
+        border: 1px solid #d5d5d5;
+        font-size: 16px;color: #3a3a3a;
+        text-indent: 55px;
+        outline: none;
+		border-radius: 10px
+    }
+
+    .ex-window-input-playlistname{
+        background: url(../static/img/playlist.png) no-repeat 2px ;
+    }
+
+    .ex-window-submit{
+        width: 80%;height: 50px;background: #21d560;border:none;font-size: 16px;color: #fff;
+		margin: auto;
+        outline: none;text-decoration: none;
+        display: block;text-align: center;line-height: 50px;
+		border-radius: 10px
+    }
+
+    .ex-window-submit:hover{
+        background: #19a648;
+    }
+	
+	.ex-window-msg{
+		height: 30px;line-height: 30px;
+		text-align: left;
+		color: #d90000;
+	}
+
     </style>
 </head>
 <body>
@@ -417,7 +492,35 @@
             </div>
         </div>
         
-        <div class='nav-button' style='position:absolute; bottom:30px; right:30px;'><a href='#' style='color: #fff;'>EXPORT</a></div>
+        <div class='nav-button' style='position:absolute; bottom:30px; right:30px;'>
+            <a href='javascript:showEXWindow()' style='color: #fff;'>EXPORT</a>
+        </div>
+
+        <div class='ex-mask' id='mask' onselectstart='return false'></div>
+
+        <div class='ex-window' id='winMove' onselectstart='return false;'>
+            <div class='ex-window-title' id='winDrag' onselectstart='return false;'>
+                Export Your Playlist
+                <a class='ex-window-closebutton' href='javascript:hideWindow();'></a>
+            </div>
+
+            <div class='ex-window-content'>
+                <div class='ex-window-140 ex-window-pt15'>
+                    <input class='ex-window-input ex-window-input-playlistname' type='input' placeholder='New Playlist Name' value=''>
+                </div>
+				<div class='ex-window-msg'>
+					<p>
+						{{warning msg}}
+					</p>
+				</div>
+                <div>
+                    <a class='ex-window-submit' href='exportList()'>
+                        Creat & Export Playlist
+                    </a>
+                </div>
+            </div>
+        </div>
+
         {% endif %}
         
         <a id='generate-button' class='generate element-hidden' href='#' onclick="generate(this);" disabled>
@@ -512,6 +615,103 @@
             }
         }
     </script>
+	
+	<!-- Export window script -->
+	<script type='text/javascript'>
+		
+		var winInstace , onMoveStartId , mousePos = {x:0,y:0};
+		
+		function g(id){return document.getElementById(id);}
+		
+		function autoCenter( el ){
+			var bodyW = document.documentElement.clientWidth;
+			var bodyH = document.documentElement.clientHeight;
+		
+			var elW = el.offsetWidth;
+			var elH = el.offsetHeight;
+		
+			el.style.left = (bodyW-elW)/2 + 'px';
+			el.style.top = (bodyH-elH)/2 + 'px';
+		}
+		
+		function fillToBody( el ){
+			el.style.width  = document.documentElement.clientWidth  +'px';
+			el.style.height = document.documentElement.clientHeight + 'px';
+		}
+		
+		function Window( dragId , moveId ){
+		
+			var instace = {} ;
+		
+			instace.dragElement  = g(dragId);
+			instace.moveElement  = g(moveId);
+		
+			instace.mouseOffsetLeft = 0;
+			instace.mouseOffsetTop = 0;	
+	
+			instace.dragElement.addEventListener('mousedown',function(e){
+		
+				var e = e || window.event;
+		
+				dialogInstace = instace;
+				instace.mouseOffsetLeft = e.pageX - instace.moveElement.offsetLeft ;
+				instace.mouseOffsetTop  = e.pageY - instace.moveElement.offsetTop ;
+				
+				onMoveStartId = setInterval(onMoveStart,10);
+				return false;
+				// instace.moveElement.style.zIndex = zIndex ++;
+			})
+		
+			return instace;
+		}
+		
+		document.onmouseup = function(e){
+			dialogInstace = false;
+			clearInterval(onMoveStartId);
+		}
+		document.onmousemove = function( e ){
+			var e = window.event || e;
+			mousePos.x = e.clientX;
+			mousePos.y = e.clientY;
+					
+			e.stopPropagation && e.stopPropagation();
+			e.cancelBubble = true;
+			e = this.originalEvent;
+	        e && ( e.preventDefault ? e.preventDefault() : e.returnValue = false );
+		
+	        document.body.style.MozUserSelect = 'none';
+		}	
+		
+		function onMoveStart(){
+		
+			var instace = dialogInstace;
+		    if (instace) {
+		    	var maxX = document.documentElement.clientWidth -  instace.moveElement.offsetWidth;
+		    	var maxY = document.documentElement.clientHeight - instace.moveElement.offsetHeight ;
+		
+				instace.moveElement.style.left = Math.min( Math.max( ( mousePos.x - instace.mouseOffsetLeft) , 0 ) , maxX) + "px";
+				instace.moveElement.style.top  = Math.min( Math.max( ( mousePos.y - instace.mouseOffsetTop ) , 0 ) , maxY) + "px";
+		    }
+		}
+		
+		function showEXWindow(){
+			g('winMove').style.display = 'block';
+			g('mask').style.display = 'block';
+			autoCenter( g('winMove') );
+			fillToBody( g('mask') );
+		}
+		
+		function hideWindow(){
+			g('winMove').style.display = 'none';
+			g('mask').style.display = 'none';
+		}
+
+		window.onresize = showEXWindow;
+		
+		Window('winDrag','winMove');
+		
+		showDialog();
+	</script>
     
     <!-- pie chart script -->
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
