--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -360,8 +360,8 @@
     .ex-window a{text-decoration: none;}
 
     .ex-window-title{
-        height: 48px;line-height: 48px; padding:0px 20px;color: #535353;font-size: 16px;font-weight: bold;
-        border-bottom: 1px solid #efefef;background: #f5f5f5;
+        height: 48px;line-height: 48px; padding:0px 20px;color: #535353;font-size: 16px;font-weight: 800;
+        border-bottom: 1px solid #efefef;background: #fff3f4;
         cursor: move;
         user-select:none;
     }
@@ -402,15 +402,18 @@
     }
 
     .ex-window-submit{
-        width: 80%;height: 50px;background: #21d560;border:none;font-size: 16px;color: #fff;
+        width: 80%;height: 50px;background: #1db954;border:initial;font-size: 16px;color: #e7e7e7;
 		margin: auto;
         outline: none;text-decoration: none;
         display: block;text-align: center;line-height: 50px;
-		border-radius: 10px
+		font-weight: 600;
+		border-radius: 50px
     }
 
     .ex-window-submit:hover{
-        background: #19a648;
+        background: #1fdd58;
+		color: #fff;
+		font-size: 17px;
     }
 	
 	.ex-window-msg{
