Fixed token deletion issues when the app is running on Zappa

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -445,7 +445,7 @@
         
         function generate(obj) {
             if (selectedPlIndex >= 0) {
-                obj.href="/home/".concat(plIds[selectedPlIndex].toString());
+                obj.href="/generation/".concat(plIds[selectedPlIndex].toString());
             }
         }
         
