delete unfinished function

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -513,11 +513,11 @@
                 </div>
 				<div class='ex-window-msg'>
 					<p>
-						{{warning msg}}
+						
 					</p>
 				</div>
                 <div>
-                    <a class='ex-window-submit' href='exportList()'>
+                    <a class='ex-window-submit' href='#'>
                         Creat & Export Playlist
                     </a>
                 </div>
